stone: Set DecoupleInteractiveModeFromDisplay to false
Configuring device to be in interactive mode whenever display is on

Change-Id: I2ac5fb39da9a93111283dc23a5fafae0d3cd602f

--- a/overlay/FrameworkOverlayStone/res/values/config.xml
+++ b/overlay/FrameworkOverlayStone/res/values/config.xml
@@ -441,7 +441,7 @@
          to maximize power savings but not all devices support it.
          Refer to power.h for details.
     -->
-    <bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool>
+    <bool name="config_powerDecoupleInteractiveModeFromDisplay">false</bool>
 
     <!-- Telephony qualified networks service package name to bind to by default. -->
     <string name="config_qualified_networks_service_package" translatable="false">vendor.qti.iwlan</string>
