--- a/overlay/FrameworkOverlayStone/res/xml/power_profile.xml
+++ b/overlay/FrameworkOverlayStone/res/xml/power_profile.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
-    <item name="ambient.on">0.1</item>
-    <item name="screen.on.display0">82.62</item>
-    <item name="screen.full.display0">403.06</item>
-    <item name="bluetooth.active">7.68</item>
-    <item name="bluetooth.on">0.79</item>
-    <item name="wifi.on">0.14</item>
-    <item name="wifi.active">255.28</item>
-    <item name="wifi.scan">18.45</item>
-    <item name="audio">22.59</item>
-    <item name="video">73.08</item>
-    <item name="camera.flashlight">135.43</item>
-    <item name="camera.avg">548.30</item>
-    <item name="gps.on">43.39</item>
-    <item name="radio.active">630.53</item>
-    <item name="radio.scanning">54.92</item>
+    <item name="ambient.on.display0">0.1</item>
+    <item name="screen.on.display0">93.7</item>
+    <item name="screen.full.display0">410.76</item>
+    <item name="bluetooth.active">12.65</item>
+    <item name="bluetooth.on">0.2</item>
+    <item name="wifi.on">0.35</item>
+    <item name="wifi.active">196.57</item>
+    <item name="wifi.scan">26.83</item>
+    <item name="audio">12.22</item>
+    <item name="video">42.27</item>
+    <item name="camera.flashlight">114.79</item>
+    <item name="camera.avg">495.72</item>
+    <item name="gps.on">42.69</item>
+    <item name="radio.active">228.71</item>
+    <item name="radio.scanning">38.88</item>
     <array name="radio.on">
-        <value>3.87</value>
-        <value>1.82</value>
+        <value>1.59</value>
     </array>
     <array name="cpu.active">
         <value>0.1</value>
@@ -47,45 +46,42 @@
         <value>1651200</value>
         <value>1804800</value>
         <value>1900800</value>
-        <value>2054400</value>
-        <value>2208000</value>
+        <value>2016000</value>
     </array>
     <array name="cpu.core_power.cluster0">
-        <value>32.59</value>
-        <value>37.34</value>
-        <value>38.74</value>
-        <value>44.79</value>
-        <value>52.44</value>
-        <value>61.60</value>
-        <value>91.15</value>
-        <value>98.20</value>
-        <value>99.85</value>
-        <value>109.77</value>
+        <value>25.81</value>
+        <value>25.75</value>
+        <value>28.50</value>
+        <value>31.80</value>
+        <value>32.65</value>
+        <value>40.18</value>
+        <value>40.54</value>
+        <value>48.73</value>
+        <value>48.56</value>
+        <value>51.29</value>
     </array>
     <array name="cpu.core_power.cluster1">
-        <value>116.11</value>
-        <value>127.57</value>
-        <value>134.51</value>
-        <value>143.24</value>
-        <value>184.69</value>
-        <value>207.05</value>
-        <value>229.15</value>
-        <value>249.00</value>
-        <value>274.34</value>
-        <value>297.65</value>
+        <value>59.62</value>
+        <value>82.43</value>
+        <value>106.74</value>
+        <value>129.25</value>
+        <value>146.93</value>
+        <value>174.98</value>
+        <value>207.22</value>
+        <value>225.46</value>
+        <value>249.74</value>
     </array>
-    <item name="cpu.idle">5.14</item>
-    <item name="cpu.awake">14.68</item>
+    <item name="cpu.idle">6.34</item>
     <array name="memory.bandwidths">
         <value>22.7</value>
     </array>
     <item name="battery.capacity">5000</item>
     <item name="battery.typical">5000</item>
-    <item name="wifi.controller.idle">1.4</item>
-    <item name="wifi.controller.rx">177</item>
-    <item name="wifi.controller.tx">269</item>
+    <item name="wifi.controller.idle">0</item>
+    <item name="wifi.controller.rx">0</item>
+    <item name="wifi.controller.tx">0</item>
     <array name="wifi.controller.tx_levels" />
-    <item name="wifi.controller.voltage">3300</item>
+    <item name="wifi.controller.voltage">0</item>
     <array name="wifi.batchedscan">
         <value>.0002</value>
         <value>.002</value>
@@ -94,16 +90,16 @@
         <value>2</value>
     </array>
     <item name="modem.controller.sleep">0</item>
-    <item name="modem.controller.idle">1</item>
-    <item name="modem.controller.rx">200</item>
+    <item name="modem.controller.idle">0</item>
+    <item name="modem.controller.rx">0</item>
     <array name="modem.controller.tx">
-        <value>293</value>
-        <value>296</value>
-        <value>316</value>
-        <value>401</value>
-        <value>506</value>
+        <value>0</value>
+        <value>0</value>
+        <value>0</value>
+        <value>0</value>
+        <value>0</value>
     </array>
-    <item name="modem.controller.voltage">800</item>
+    <item name="modem.controller.voltage">0</item>
     <array name="gps.signalqualitybased">
         <value>0</value>
         <value>0</value>
